--- a/style_origin.css
+++ b/style_origin.css
@@ -11,7 +11,7 @@
       --main_color_yelow:#feb700;
       --second_color_lightyelow: #fff0bd;
       --font_family_main: Langar; 
-      --font_family_seconder: Langar; 
+      --font_family_seconder: Confortaa; 
   }
     
 
@@ -27,6 +27,10 @@
     font-weight: normal;
     font-style: normal;
     font-display: swap;
+}
+@font-face {
+  font-family: 'Confortaa';
+  src: url(fonts/Comfortaa-Regular.ttf);
 }
 
       /************************* Background start************************************ */
@@ -185,11 +189,12 @@
     font-style: normal;
     /* font-size: 20px; */
     font-size: 1.5rem;
-    color: black;
+    color: var(--second_color_darkblue);
   }
   
   a:hover {
     color:var(--second_color_lightyelow);
+    transition: all 0.3s linear;
   }
 
 
