--- a/style_equipe.css
+++ b/style_equipe.css
@@ -3,8 +3,8 @@
     --second_color_darkblue: #08425d;
     --main_color_yelow:#feb700;
     --second_color_lightyelow: #fff0bd;
-    --font_family_main: Langar; 
-    --font_family_seconder: Langar; 
+    --font_family_main: Langar-Regular; 
+    --font_family_seconder: Confortaa; 
 } */
 main {
 
