--- a/style_contact.css
+++ b/style_contact.css
@@ -9,7 +9,7 @@
 .main_contact {
     display: flex;
     justify-content: space-between;
-    /* height: 100%; */
+    height: 80%;
     width: 90%;
     flex-shrink: 0;
     background-color: var(--main_color_blue);
@@ -22,7 +22,7 @@
 }
 
 .main_contact h2 {
-    font-size: calc(15px + 1vw);
+    font-size: calc(14px + 1vw);
     font-weight: 400;
     font-family: var(--font_family_main);
     text-align: center;
@@ -31,7 +31,7 @@
 }
 
 .main_contact p {
-    font-size: calc(8px + 1vw);
+    font-size: calc(6.5px + 1vw);
     line-height: calc(12px + 1.5vw);
     font-weight: 100;
     font-style: normal;
@@ -131,5 +131,9 @@
         width: 90%;
         height: 70%;
       
+    }
+
+    .main_contact p {
+        font-size: calc(8px + 1vw);
     }
 }
