--- a/style_origin.css
+++ b/style_origin.css
@@ -83,6 +83,8 @@
   }
   
   .logo {
+    
+   
     grid-area: logo;
     display: flex;
     justify-content: center;
@@ -90,8 +92,8 @@
   }
   
   .logo > img {
-    width: 100%;
-    height: 100%;
+    width: 90%;
+    height: 90%;
     animation-name: example2;
    animation-duration: 20s;
    animation-iteration-count: infinite;
@@ -101,11 +103,11 @@
 }
 
   @keyframes example2 {
-    0%   {transform: rotate(0deg); width: 100%; height: 100%;}
+    0%   {transform: rotate(0deg); width: 90%; height: 90%;}
     25%  {transform: rotate(90deg); width: 70%; height: 70%;}
-    50%  {transform: rotate(0deg); width: 100%; height: 100%;}
+    50%  {transform: rotate(0deg); width: 90%; height: 900%;}
     75% {transform: rotate(-90deg); width: 70%; height: 70%;}
-    100% {transform: rotate(0deg); width: 100%; height: 100%;}
+    100% {transform: rotate(0deg); width: 90%; height: 90%;}
   }
   
   .title {
@@ -122,7 +124,7 @@
     grid-area: nav;
     display: grid;
     grid-template-columns: repeat(5, 1fr);
-    gap: 8%;
+    gap: 6%;
     align-items: center;
     justify-items: center;
   }
@@ -250,18 +252,18 @@
   /******************** Footer end****************************** */
   
   /******************** @ Media screen  start****************************** */
-  @media screen and (max-width: 320px) {
+  @media screen and (max-width: 325px) {
     /************* Header start**********/
     header {
       height: 80px;
   
-      grid-template-areas: "logo title title title navm navm";
+      grid-template-areas: "logo logo . . navm navm";
     }
   
-    .logo {
+    /* .logo {
       width: 73px;
       height: 55px;
-    }
+    } */
   
     .nav_main,
     .title {
@@ -300,18 +302,18 @@
   
     /************* Footer end**********/
   }
-  @media screen and (min-width: 320px) and (max-width: 480px) {
+  @media screen and (min-width: 325px) and (max-width: 480px) {
     /************* Header start**********/
     header {
       height: 80px;
-  
+      grid-template-columns: 1.5fr repeat(5, 1fr);
       grid-template-areas: "logo title title title navm navm";
     }
   
-    .logo {
+    /* .logo {
       width: 73px;
       height: 55px;
-    }
+    } */
   
     .title {
       font-size: 1.1rem;
@@ -357,7 +359,7 @@
     /************* Header start**********/
     header {
       height: 100px;
-  
+     
       grid-template-areas: "logo title title title navm navm";
     }
   
@@ -407,7 +409,7 @@
       grid-template-areas: "logo . nav nav nav nav";
     }
     .nav_main {
-      gap: 7%;
+      gap: 5%;
     }
   
     .title {
@@ -432,7 +434,7 @@
   @media screen and (min-width: 1024px) and (max-width: 1400px) {
     /************* Header start**********/
     header {
-      height: 145px;
+      height: 140px;
   
       grid-template-areas: "logo title title nav nav nav";
     }
