--- a/style_origin.css
+++ b/style_origin.css
@@ -91,14 +91,14 @@
     align-items: center;
   }
   
-  .logo > img {
+  .logo  img {
     width: 90%;
     height: 90%;
     animation-name: example2;
    animation-duration: 20s;
    animation-iteration-count: infinite;
   }
-  .logo>img:hover{
+  .logo img:hover{
     animation-name: none;
 }
 
@@ -146,7 +146,7 @@
     right: 0;
     top: 70px;
     background: var(--main_color_yelow);
-    z-index: 1;
+    z-index: 10;
   }
   
   .dropdown-content > a{
