--- a/evenements.css
+++ b/evenements.css
@@ -130,12 +130,15 @@ button, .int_link {
 .illustr {
     max-width: 30%;
     border-radius: 20px;
+    box-shadow: 3px 3px 2px var(--second_color_darkblue);
+
 }
 
 .rond {
     border-radius: 50%;
     width: 15%;
     align-self: center;
+    box-shadow: 3px 3px 2px var(--second_color_darkblue);
 }
 .boutons{
     display: flex;
