--- a/style_accueil.css
+++ b/style_accueil.css
@@ -42,6 +42,8 @@ main {
   align-items: center;
   justify-items: center;
   margin-left: 10%;
+  box-shadow: 3px 3px 2px var(--second_color_darkblue);
+
 }
 
 .photo_home_page {
@@ -98,6 +100,7 @@ main {
   border: var(--second_color_darkblue) solid 1px;
   border-radius: 30px;
   text-align: center;
+  box-shadow: 3px 3px 2px var(--second_color_darkblue);
 }
 
 .calendrie_home_page a {
@@ -124,6 +127,7 @@ main {
   border: var(--second_color_darkblue) solid 1px;
   border-radius: 30px;
   text-align: center;
+  box-shadow: 3px 3px 2px var(--second_color_darkblue);
 }
 
 .event_venir {
