--- a/style_planning.css
+++ b/style_planning.css
@@ -2,7 +2,7 @@
     gap: 30px;
     height: 100%;
     display: grid;
-    grid-template-columns:  2fr;
+    grid-template-columns: 1.2fr 1fr;
     grid-auto-rows: auto;
     gap: 20px;
     margin-left: 10%;
@@ -16,7 +16,6 @@
 
 .jour_semaine {
     background-color: var(--green);
-
 }
 
 .first_row td {
@@ -74,36 +73,48 @@ td {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: flex-end;
 }
 
 .form legend {
-    font-size: 2em;
+    font-size: calc(15px + 1vw);
     margin-bottom: 20px;
-    padding: 10px;
+    padding: 3%;
+}
+
+.form div {
+    padding: 2%;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
 }
 
 
 .form_btn {
     justify-self: center;
     height: 30px;
-    width: auto;
+    width: 100px;
     border: 1px solid #08425D;
     border-radius: 20px;
     color: black;
     background-color: #FFF0BD;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 2px;
+    margin-bottom: 20px;
 }
 
 input {
     height: 30px;
-    width: 80%;
+    width: 60%;
 }
 
 .aside_right {
     display: flex;
     flex-direction: column;
     gap: 10%;
-    height: 60vh;
+    width: 100%;
     grid-area: ar1;
 }
 
@@ -114,27 +125,29 @@ input {
     align-items: center;
     justify-content: center;
     height: 50%;
+    width: 100%;
     color: white;
     border: 1px solid black;
     border-radius: 15px;
 }
 
 .ar1 p {
-    font-size: 2em;
+    font-size: calc(15px + 1vw);
     padding: 10px 10px 0 10px;
 }
 
 .event_next {
-    height: 30px;
-    width: auto;
+    width: 80%;
     border: 1px solid #08425D;
     border-radius: 10px;
     color: black;
     background-color: #FFF0BD;
     padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 5%;
 }
-
-
 
 .ar2 {
     background-color: #085D85;
@@ -143,26 +156,29 @@ input {
     align-items: center;
     justify-content: center;
     height: 50%;
+    width: 100%;
     color: white;
     border: 1px solid black;
     border-radius: 15px;
 }
 
 .event_last {
-    height: 30px;
-    width: auto;
+    width: 80%;
     border: 1px solid #08425D;
     border-radius: 10px;
     color: black;
     background-color: #FFF0BD;
     padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 5%;
 }
 
 .ar2 p {
-    font-size: 2em;
+    font-size: calc(15px + 1vw);
     padding: 10px;
 }
-
 
 .v_mobile {
     display: none;
@@ -172,7 +188,15 @@ input {
     display: none;
 }
 
-.vm_jour {}
+.home_page_even_phone {
+    display: none;
+}
+
+/* .vm_ev_future, 
+.vm_ev_past {
+    display: none;
+} */
+
 
 /*-----------------------------Version mobile---------------------------------------------------*/
 
@@ -206,8 +230,6 @@ input {
         border-radius: 20px;
         margin: 5%;
         color: white;
-
-
     }
 
     .vm_jour button {
@@ -229,8 +251,39 @@ input {
     }
 
     .vm_aside_top {
-        background-color: #085D85;
+        display: flex;
+        flex-direction: row;
+    }
 
+    .vm_last_event,
+    .vm_next_event {
+        width: 45%;
+        background-color: #085D85;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        border-radius: 20px;
+        margin: 5%;
+        color: white;
+        padding: 10px 0 20px 0;
+    }
+    .vm_last_event p,
+    .vm_next_event p {
+        margin: 15px;
+        font-size: calc(15px + 1vw);
+        text-align: center ;
+    }
+
+    .vm_aside_top button {
+        background-color: #085D85;
+        border: 2px solid white;
+        color: white;
+        border-radius: 20px;
+        margin: 3%;
+        width: 70%;
+        height: auto;
+        padding: 10px;
     }
 
 }
