--- a/style_planning.css
+++ b/style_planning.css
@@ -1,6 +1,6 @@
-.wrapper {
+main {
     gap: 30px;
-    height: 100%;
+    /* height: 100%; */
     display: grid;
     grid-template-columns: 1.2fr 1fr;
     grid-auto-rows: auto;
@@ -202,7 +202,7 @@ input {
 
 @media screen and (max-width: 600px) {
 
-    .wrapper {
+    main {
         display: flex;
         flex-direction: column-reverse;
 
@@ -284,6 +284,7 @@ input {
         width: 70%;
         height: auto;
         padding: 10px;
+        
     }
 
 }
