--- a/style_planning.css
+++ b/style_planning.css
@@ -44,6 +44,9 @@ table {
     border-collapse: collapse;
     width: 100%;
     margin-top: 2%;
+    font-family: var(--font_family_seconder);
+    font-size: 0.8em;
+    box-shadow: 10px -10px 10px var(--second_color_lightyelow);
 }
 
 td {
@@ -63,7 +66,7 @@ td {
     justify-content: center;
     align-items: center;
     color: white;
-    background-color: #085D85;
+    background-color: var(--main_color_blue);
     grid-area: fo;
     border: 1px solid black;
     border-radius: 20px;
@@ -92,10 +95,12 @@ td {
 
 
 .form_btn {
+    font-family: var(--font_family_seconder);
+    font-weight: 700;
     justify-self: center;
     height: 30px;
-    width: 100px;
-    border: 1px solid #08425D;
+    width: 100%;
+    border: 1px solid var(--main_color_blue);
     border-radius: 20px;
     color: var(--main_color_blue);
     background-color: var(--second_color_lightyelow);
@@ -105,10 +110,21 @@ td {
     padding: 2px;
     margin-bottom: 20px;
 }
+.form_btn:hover{
+    background-color: var(--main_color_yelow);
+}
 
 input {
     height: 30px;
     width: 60%;
+}
+label{
+    font-family: var(--font_family_seconder);
+    font-size: 0.8em;
+}
+.form_ln{
+    display: flex;
+    align-items: baseline;
 }
 
 .aside_right {
@@ -135,6 +151,7 @@ input {
     color: var(--second_color_lightyelow);
     border: 1px solid black;
     border-radius: 15px;
+    margin-bottom: 5%;
 }
 
 .ar1 p {
@@ -142,21 +159,23 @@ input {
     padding: 10px 10px 0 10px;
 }
 
-.event_next {
-    width: 80%;
-    border: 1px solid #08425D;
-    border-radius: 10px;
+.event_next, .event_last {
+    font-family: var(--font_family_main);
     color: black;
-    background-color: #FFF0BD;
+    width: 80%;
+    border: 1px solid var(--main_color_blue);
+    border-radius: 10px;
+    background-color: var(--second_color_lightyelow);
     padding: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 5%;
+    margin:5%;
+    text-decoration: none;
 }
 
 .ar2 {
-    background-color: #085D85;
+    background-color:var(--main_color_blue);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -168,19 +187,15 @@ input {
     border-radius: 15px;
 }
 
-.event_last {
-    width: 80%;
-    border: 1px solid #08425D;
-    border-radius: 10px;
+.event_last:hover{
+    background-color: var(--main_color_yelow);
     color: black;
-    background-color: #FFF0BD;
-    padding: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 5%;
 }
-
+ .event_next:hover{
+    background-color: var(--main_color_yelow);
+    color: black;
+    
+}
 .ar2 p {
     font-size: calc(15px + 1vw);
     padding: 10px;
