--- a/style_accueil.css
+++ b/style_accueil.css
@@ -234,7 +234,7 @@ main {
   
     .text_home_page {
       width: 95%;
-      align-items: space-around;
+      /* align-items: space-around; */
       /* font-size: 24px; */
       font-size:calc(14px + 1vw);
       color: #000000;
