--- a/realisations.css
+++ b/realisations.css
@@ -121,9 +121,10 @@ input:checked+.btn_nav {
 }
 
 .card {
-    /* display: flex; */
+    display: flex;
     flex-direction: column;
     text-align: center;
+    
     margin-bottom: 5em;
     padding: 1em;
 }
@@ -144,6 +145,7 @@ h2 {
 .container {
     position: relative;
     display: block;
+    
     width: 90%;
 }
 
