--- a/realisations.css
+++ b/realisations.css
@@ -121,7 +121,7 @@ input:checked+.btn_nav {
 }
 
 .card {
-    display: flex;
+    /* display: flex; */
     flex-direction: column;
     text-align: center;
     
